fixed scrollbars not always updating. changed bg sizes to cover

--- a/css/services.css
+++ b/css/services.css
@@ -9,6 +9,7 @@
 }
 #bgimage3 {
 	background-image:url(../img/Services/group.jpg);
+	background-position: center top;
 }
 #bgimage4 {
 	background-image:url(../img/Services/bio.jpg);
